--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,30 @@ a {
     line-height: 37px;
     padding: 0 15px;
 }
+
+
+a:hover {
+    background-color: #333;
+}
+
+#main{
+
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    min-height: 475px;
+}
+#main li{
+
+    float: left;
+    height: 96px;
+    list-style: none;
+    margin: 6px;
+    position: relative;
+    width: 125px;
+    -moz-box-shadow: 0 0 5px #000;
+    -webkit-box-shadow: 0 0 5px #000;
+    box-shadow: 0 0 5px #000;
+    
+}
