--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,29 @@ a:hover {
     margin: 6px;
     position: relative;
     width: 125px;
-    -moz-box-shadow: 0 0 5px #000;
-    -webkit-box-shadow: 0 0 5px #000;
     box-shadow: 0 0 5px #000;
     
+    
+}
+#main ul{
+
+    overflow: hidden;
+
+}
+
+#main ul.hidden{
+
+    display: none;
+
+}
+.container ul li img{
+    width: 100%;
+}
+
+
+footer {
+    text-align: center;
+    color: #333;
+    font-size: 16px;
+    font-weight: bold;
 }
